fix positioning of top-nav with z-index

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,7 +3,7 @@
   right: 1px;
   height: auto !important;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   background: #283761;
 }
 
